--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="./script.js"></script>
     <div class="container">
       <h1 class="photo-heading">Animals Photo</h1>
-      <div class="animal-photos">
+      <div id="animal-photos">
         <img
           src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg"
           alt="camel"
@@ -24,7 +24,7 @@
           alt="elephant"
         />
       </div>
-      <div class="animal-photos">
+      <div id="animal-photos">
         <img
           src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/gorilla.jpg"
           alt="gorilla"
@@ -38,7 +38,7 @@
           alt="lion"
         />
       </div>
-      <div class="animal-photos">
+      <div id="animal-photos">
         <img
           src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/polar_bear.jpg"
           alt="polar_bear"
