--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
   <body>
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
-    <div class="animal-photos">
-      <h1 class="photo-heading">Animal Photos</h1>
-      <div id="animal-photos">
+    <div id="animal-photos">
+      <h1 id="photo-heading">Animal Photos</h1>
+      <div id="animal-photo">
         <img
           src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg"
-          alt="camel"
+          alt="animal-photos"
         />
         <img
           src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/cheetah.jpg"
-          alt="cheetah"
+          alt="animal-photos"
         />
         <img
           src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/elephant.jpg"
